Add new anti pattern

--- a/index.html
+++ b/index.html
@@ -451,6 +451,9 @@
 <section view id=antipatterns>
   <h1>Anti-Patterns</h1>
 
+  <header>Doing more than 16<abbr title=Milliseconds>ms</abbr> of Work</header>
+
+
   <header>Unnecessary Reflow</header>
 
 
