--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
       Should never reach outside of your component to talk to siblings.
       There should be a "parent container" component that "sandboxes" in related components.
 
+      <footer></footer>
   </article>
 
 
