Wrap Animation Frame in article

--- a/index.html
+++ b/index.html
@@ -462,7 +462,11 @@
   </article>
 
 
+  <article>
   <header>Doing more than 16<abbr title=Milliseconds>ms</abbr> of Work</header>
+
+      <footer></footer>
+  </article>
 
 
   <header>Unnecessary Reflow</header>
