Wrap 'Unnecessary Reflow' antipattern in article

--- a/index.html
+++ b/index.html
@@ -469,7 +469,11 @@
   </article>
 
 
-  <header>Unnecessary Reflow</header>
+  <article>
+    <header>Unnecessary Reflow</header>
+
+    <footer></footer>
+  </article>
 
 
   <header>Unnecessary Repaint</header>
