Wrap 'Unnecessary Repaint' antipattern in article

--- a/index.html
+++ b/index.html
@@ -476,8 +476,11 @@
   </article>
 
 
-  <header>Unnecessary Repaint</header>
+  <article>
+    <header>Unnecessary Repaint</header>
 
+    <footer></footer>
+  </article>
 
 </section>
 
