Link to importing HTML Partials

--- a/index.html
+++ b/index.html
@@ -384,6 +384,9 @@
 
 
   <header>When to separate</header>
+
+  <header>Importing HTML "Partials"</header>
+  https://www.scirra.com/blog/ashley/34/html-imports-are-the-best-web-component
 -->
 
   <article><!-- <medium-article> -->
