Add convention headers for Fetching and Preloading

--- a/index.html
+++ b/index.html
@@ -371,6 +371,12 @@
   <header>Creating Custom Elements</header>
 
 
+  <header>Default Content</header>
+
+
+  <header>Styling Real Estate</header>
+
+
   <header>Registering Events</header>
 
 
