--- a/index.html
+++ b/index.html
@@ -393,6 +393,14 @@
 
   <header>Importing HTML "Partials"</header>
   https://www.scirra.com/blog/ashley/34/html-imports-are-the-best-web-component
+
+
+  <header><em>Prefetching</em> <code>&lt;link&gt;</code>s</header>
+
+
+  <header><em>Preloading</em> Dependencies</header>
+
+
 -->
 
   <article><!-- <medium-article> -->
