Close Custom Elements Example pane

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 <aside>
   <header>Examples</header>
 
-  <details open>
+  <details>
     <summary><a href=/examples#html>Custom Elements</a></summary>
 
     <nav>
