Add Mixins & Templates categories to Examples

--- a/index.html
+++ b/index.html
@@ -615,6 +615,26 @@
 
   </details>
 
+  <details>
+    <summary>Mixins</summary>
+
+    <nav>
+      <ul>
+        <li><abbr title='Reactive JS'>RxJS</abbr> <em>(ReactiveJS)</em>
+    </nav>
+
+  </details>
+
+  <details>
+    <summary>Templates</summary>
+
+    <nav>
+      <ul>
+        <li>
+    </nav>
+
+  </details>
+
 </aside>
 
 <footer>
