Close Getting started conventions

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <a href=#lifecycle>Lifecycle</a>
 
     <li>
-      <details open>
+      <details>
         <summary><a href=#conventions>Conventions</a></summary>
 
         <ul>
