Close Getting started Anti-Patterns

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </details>
 
     <li>
-      <details open>
+      <details>
         <summary><a href=#antipatterns>Anti-Patterns</a></summary>
 
         <ul>
