Add Installation script choices to Getting Started

--- a/index.html
+++ b/index.html
@@ -104,7 +104,20 @@
   <header>Getting Started</header>
   <ul>
     <li>
-      <a href=#installation>Installation</a>
+      <details>
+        <summary><a href=#installation>Installation</a></summary>
+
+        <ul>
+          <li>
+            <a href=#>&lt;script&gt; tag</a>
+
+          <li>
+            <a href=#>Chrome Extension</a>
+
+          <li>
+            <a href=#><code>$npm i snuggsi</code></a>
+
+      </details>
 
     <li>
       <a href=#lifecycle>Lifecycle</a>
