HTML Stylize custom-elements examples

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
   <header>Examples</header>
 
   <details>
-    <summary><a href=/examples#html>Custom Elements</a></summary>
+    <summary><a href=/examples#html>&lt;custom-elements&gt;</a></summary>
 
     <nav>
       <ul>
