--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
   </details>
 
   <details>
-    <summary><a href=/examples#svg>SVG Elements</a></summary>
+    <summary><a href=/examples#svg>&lt;svg-elements&gt;</a></summary>
 
     <nav>
       <ul>
