--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
   </details>
 
   <details>
-    <summary><a href=/examples#components>Components</a></summary>
+    <summary><a href=/examples#components>&lt;web-components&gt;</a></summary>
 
     <nav>
       <ul>
