Add details list for Getting Started Lifecycle

--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@
       </details>
 
     <li>
-      <a href=#lifecycle>Lifecycle</a>
+      <details>
+        <summary><a href=#lifecycle>Lifecycle</a></summary>
+
+        <ul>
+          <li></li>
+
+      </details>
 
     <li>
       <details>
