Wrap script installation in code tag

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <ul>
           <li>
-            <a href=#><code>&lt;script&gt; tag</code></a>
+            <a href=#><code>&lt;script&gt;</code> tag</a>
 
           <li>
             <a href=#>Chrome Extension</a>
