Wrap Mixins () example in a link

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
   </details>
 
   <details>
-    <summary>Mixins ()</summary>
+    <summary><a title=Mixins href=/examples#mixins>Mixins ()</a></summary>
 
     <nav>
       <ul>
