Wrap template example in a link

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
   </details>
 
   <details>
-    <summary>&lt;template&gt;</summary>
+    <summary><a title='<template>' href=/examples#template>&lt;template&gt;</a></summary>
 
     <nav>
       <ul>
