Update to kB as per @tmornini 's request

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <header-group>
   <h2 slot=header>
     Easy Web Components in
-    <a target=github href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>~ 1<abbr title=Kilobyte>Kb</abbr></a>
+    <a target=github href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>~ 1<abbr title=kiloByte>kB</abbr></a>
   </h2>
 
   <section slot=subheader id=badges>
