Add template collections to examples nav

--- a/index.html
+++ b/index.html
@@ -642,6 +642,8 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
     <nav>
       <ul>
         <li>
+          <a title=Collections href=examples#template:collections>Colections</a>
+
     </nav>
 
   </details>
