Fix spelling error

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
     <nav>
       <ul>
         <li>
-          <a title=Collections href=examples#template:collections>Colections</a>
+          <a title=Collections href=examples#template:collections>Collections</a>
 
     </nav>
 
