Add link to example for template:object to nav

--- a/index.html
+++ b/index.html
@@ -644,6 +644,9 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
         <li>
           <a title=Collections href=examples#template:collections>Collections</a>
 
+        <li>
+          <a title=Collections href=examples#template:object>Object</a>
+
     </nav>
 
   </details>
