Update button styling for multiple-choice

--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -46,8 +46,26 @@
 
 <style>
 
+multiple-choice blockquote {
+  font-size: 1em;
+  text-align: center;
+  margin: 1em 0 1.612em;
+}
+
+multiple-choice fieldset ul
+  { list-style-type: none }
+
+multiple-choice fieldset ul li
+  { margin: 0 0 1em  2em }
+
 multiple-choice footer
   { text-align: center }
+
+multiple-choice footer button {
+  width: 6em;
+  margin: 1em 1em 0;
+  font-size: 1.5em;
+}
 
 </style>
 
