Tweak styling a touch for multiple choice

--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -49,7 +49,11 @@
 multiple-choice blockquote {
   font-size: 1em;
   text-align: center;
-  margin: 1em 0 1.612em;
+  margin: 1em 0 1.612em
+}
+
+multiple-choice fieldset {
+  border: 1em double grey;
 }
 
 multiple-choice fieldset ul
@@ -63,8 +67,8 @@ multiple-choice footer
 
 multiple-choice footer button {
   width: 6em;
-  margin: 1em 1em 0;
   font-size: 1.5em;
+  margin: 1em 1em 0
 }
 
 </style>
