--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -52,6 +52,14 @@ multiple-choice blockquote {
   margin: 1em 0 1.612em
 }
 
+multiple-choice legend {
+  margin: 0 auto;
+  display: block;
+  border-radius: 5em;
+  padding: 1em 3.5em;
+  background: rgba(20,20,20,0.2);
+}
+
 multiple-choice fieldset {
   border: 1em double grey;
 }
