Use JSFiddle example

--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -79,7 +79,33 @@ multiple-choice footer button {
   margin: 1em 1em 0
 }
 
+figure {
+  margin: 0;
+  width: 46vw;
+  display: flex;
+  min-height: 60vh;
+  position: absolute;
+  flex-flow: row wrap;
+}
+
+figure iframe
+  { width: 100% }
+
+figure:first-of-type
+  { margin-left: 4vw; left: 0 }
+
+figure:last-of-type
+  { margin-right: 4vw; right: 0 }
+
 </style>
+
+<figure>
+   <iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/html,css/dark/?fontColor=ffffff&accentColor=9696f0&bodyColor=3b3b3b&menuColor=3b3b3b frameborder=0></iframe>
+ </figure>
+
+<figure>
+  <iframe src=//jsfiddle.net/snuggs/3zwkj9wg/embedded/result/dark/?fontColor=ffffff&accentColor=9696f0&menuColor=3b3b3b frameborder=0></iframe>
+</figure>
 
 <script src=/browser-sync.es></script>
 
