--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </a>
 
     <a href=//github.com/devpunks/snuggsi/tree/master/dist#readme>
-      <img alt='Brotli size' src=https://img.shields.io/badge/Brotli%20size:-~%201Kb-ff69b4.svg>
+      <img alt='Brotli size' src=https://img.shields.io/badge/Brotli%20size:-~%201kB-ff69b4.svg>
     </a>
 
     <a href=//www.npmjs.com/package/snuggsi>
