Setup default Element factory

--- a/examples/github-ribbon/index.html
+++ b/examples/github-ribbon/index.html
@@ -1,12 +1,19 @@
 <h1>&lt;github-ribbon&gt;</h1>
 
+
 <template>
   <!-- insert default content here -->
 </template>
 
+
 <script defer>
 
+Element `github-ribbon`
+
+(class extends HTMLElement { })
+
 </script>
+
 
 <style>
 
