Migrate title to default template

--- a/examples/github-ribbon/index.html
+++ b/examples/github-ribbon/index.html
@@ -1,10 +1,10 @@
 <h1>&lt;github-ribbon&gt;</h1>
 
 
-<template url={url}>
+<template url={url} title='View on Github'>
 
   <slot name=link>
-    <a rel=help target=github href={url} title='View on Github'>View on Github</a>
+    <a rel=help target=github href={url}>View on Github</a>
   </slot>
 
 </template>
