Allow `pointer-events: all` to capture mousing over transparencies

--- a/examples/github-ribbon/index.html
+++ b/examples/github-ribbon/index.html
@@ -25,9 +25,9 @@ Element `github-ribbon`
 
 <style>
 
-github-ribbon svg {
-  pointer-events: all;
-}
+github-ribbon svg
+  { pointer-events: all }
+
 github-ribbon a {
   z-index: 3;
 
