Allow `pointer-events: all` to capture mousing over transparencies

--- a/examples/github-ribbon/index.html
+++ b/examples/github-ribbon/index.html
@@ -26,6 +26,7 @@ Element `github-ribbon`
 <style>
 
 github-ribbon svg
+  /* Used for capturing mouseover within SVG transparencies */
   { pointer-events: all }
 
 github-ribbon a {
