--- a/examples/github-ribbon/index.html
+++ b/examples/github-ribbon/index.html
@@ -52,10 +52,11 @@ github-ribbon a {
 }
 
 github-ribbon a::before {
-  top: -0.3em; /* padding */
+  content: "";
+
+  top: -0.3em; /* padding delta */
   width: 8vh;
   height: 8vh;
-  content: "";
   padding: 0.3em;
   display: block;
   margin-left: 11vw;
