--- a/index.html
+++ b/index.html
@@ -589,6 +589,9 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
           <a href=/examples/hello-world>&lt;hello-world&gt;</a>
 
         <li>
+          <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
+
+        <li>
           <a href=/examples/github-ribbon/example.html>&lt;github-ribbon&gt;</a>
 
         <li>
