Add `github-ribbon` to /examples/index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -33,6 +33,9 @@
     <a title='<header-group>' href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
   <li>
+    <a title='<github-ribbon>' href=/examples/github-ribbon/example.html>&lt;github-ribbon&gt;</a>
+
+  <li>
     <a title='<add-subtract>' href=/examples/add-subtract>&lt;add-subtract&gt;</a>
 
   <li>
