Add Token list documentation for `github-ribbon`

--- a/examples/github-ribbon/index.html
+++ b/examples/github-ribbon/index.html
@@ -35,7 +35,7 @@ Element `github-ribbon`
      href=https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a>
        <code>&lt;a&gt;</code>
    </a>
-   element
+   element which links to a Github repository <code>{url}</code>
 </p>
 
 
@@ -72,6 +72,14 @@ Element `github-ribbon`
   <dd>
     Default content of custom element.
     <em>(Usually an <code>&lt;a&gt;</code> link to Github)</em>
+
+</dl>
+
+
+<h2>Tokens</h2>
+
+<dl>
+  <dt><abbr title='None applicable'>N/A</abbr>
 
 </dl>
 
