Push default text off screen

--- a/examples/github-ribbon/index.html
+++ b/examples/github-ribbon/index.html
@@ -101,6 +101,8 @@ github-ribbon a {
 
   margin:0;
   border: none;
+  overflow: hidden;
+  text-indent: -100vw;
   background: rgba(200,200,200,0.9);
   box-shadow: 0px 0px 0.8em 0.2em rgba(20,20,20,.6);
 
