Remove default borders from links

--- a/examples/github-ribbon/index.html
+++ b/examples/github-ribbon/index.html
@@ -86,7 +86,7 @@ Element `github-ribbon`
 
 <style>
 
-github-ribbon a {
+github-ribbon a:link {
   z-index: 3;
 
   top: 1.1em;
@@ -101,7 +101,6 @@ github-ribbon a {
 
   margin:0;
   border: none;
-  overflow: hidden;
   text-indent: -100vw;
   background: rgba(200,200,200,0.9);
   box-shadow: 0px 0px 0.8em 0.2em rgba(20,20,20,.6);
