*<github-ribbon> Installation* :tada: :tada: NOW THAT WAS EASY!!!

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <link rel=stylesheet href=/index.css></script>
 
 <link rel=import href=/examples/header-group>
+<link rel=import href=/examples/github-ribbon>
 
 <style>
 // enough inline styles to paint to fold
@@ -60,6 +61,8 @@
 
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
 <!--<base href=//localhost:8181>-->
+
+<github-ribbon url=https://github.com/devpunks/snuggsi></github-ribbon>
 
 <header-group>
   <h2 slot=header>
