Move events within nav bar

--- a/index.html
+++ b/index.html
@@ -137,9 +137,41 @@
         <summary><a href=#conventions>Conventions</a></summary>
 
         <ul>
-          <li></li>
+          <li>
+            <a href=#tokens>Tokens</a>
+
+          <li>
+            <!-- http://blog.aurelia.io/2016/05/23/aurelia-shadow-dom-v1-slots-prerelease -->
+            <a href=#slots>Slots</a>
+
+          <li>
+            <a title=Context href=#context>Context</a>
 
       </details>
+
+    <li>
+      <details>
+        <summary><a href=#events>Events</a></summary>
+
+        <ul>
+          <li>
+            <a href=#events:connect><em>(on)</em>connect</a>
+
+          <li>
+            <a href=#events:idle><em>(on)</em>idle</a>
+
+          <li>
+            <a href=https://developer.mozilla.org/en-US/docs/Web/API/GlobalEventHandlers>GlobalEventHandlers.<em>(on)</em>events</a>
+        </ul>
+
+        <footer>
+          <ul>
+            <li>
+              <a href=https://blog.garstasio.com/you-dont-need-jquery/events>Web Platform Event Conventions</a>
+          </ul>
+        </footer>
+      </details>
+
 
     <li>
       <details>
@@ -165,29 +197,6 @@
           <li>
             <a href=#interfaces:template>Template</a>
 
-      </details>
-
-    <li>
-      <details>
-        <summary><a href=#events>Events</a></summary>
-
-        <ul>
-          <li>
-            <a href=#events:connect><em>(on)</em>connect</a>
-
-          <li>
-            <a href=#events:idle><em>(on)</em>idle</a>
-
-          <li>
-            <a href=https://developer.mozilla.org/en-US/docs/Web/API/GlobalEventHandlers>GlobalEventHandlers.<em>(on)</em>events</a>
-        </ul>
-
-        <footer>
-          <ul>
-            <li>
-              <a href=https://blog.garstasio.com/you-dont-need-jquery/events>Web Platform Event Conventions</a>
-          </ul>
-        </footer>
       </details>
 
 
