--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 -->
 
-<script src=/></script>
+<script src=/snuggsi.es></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
