--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
 <!--<base href=//localhost:8181>-->
 
-<github-ribbon url=https://github.com/devpunks/snuggsi></github-ribbon>
+<github-ribbon url='https://github.com/devpunks/snuggsi'></github-ribbon>
 
 <header-group>
   <h2 slot=header>
