Add browser-sync script

--- a/examples/github-ribbon/example.html
+++ b/examples/github-ribbon/example.html
@@ -18,3 +18,4 @@
   <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
 </header-group>
 
+<script src=browser-sync.es></script>
