--- a/examples/github-ribbon/example.html
+++ b/examples/github-ribbon/example.html
@@ -3,7 +3,7 @@
 
 <title>snuggsi.esツ</title>
 
-<script src=/></script>
+<script src=/snuggsi.es></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
@@ -18,5 +18,5 @@
   <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
 </header-group>
 
-<script src=browser-sync.es></script>
+<script src=/browser-sync.es></script>
 
