--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -5,7 +5,7 @@
 
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 
-<script src=/snuggsi.es></script>
+<script src=/></script>
 <script nomodule src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=import href=/examples/header-group>
