Fix weather viewer link

--- a/examples/index.html
+++ b/examples/index.html
@@ -72,7 +72,7 @@
     <a title='<file-upload>' href=/examples/file-upload>&lt;file-upload&gt;</a>
 
   <li>
-    <a title='<weather-viewer> href=/examples/weather-viewer/>&lt;weather-viewer&gt;</a>
+    <a title='<weather-viewer>' href=/examples/weather-viewer/>&lt;weather-viewer&gt;</a>
 
 </ul>
 
