--- a/index.html
+++ b/index.html
@@ -669,6 +669,9 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
           <a href=/examples/input-output.html>&lt;input-output&gt;</a>
 
         <li>
+          <a href=/examples/to-do>&lt;to-do&gt;</a>
+
+        <li>
           <a href=/examples/multiple-choice>&lt;multiple-choice&gt;</a>
 
         <li>
