--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     <dt>4. <code>&lt;slot&gt;</code> Replacement
     <dd>
-      After <strong>Imporing</strong> the default contents of your custom element
+      After <strong>Importing</strong> the default contents of your custom element
       there will be a replacement of any child elements with a
       <code><a
         target=mdn
