Better naming `.all ()` to `.complete ()`

--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -24,7 +24,7 @@
 
     <footer>
       <header>{count} items left
-        <button onclick=all>Complete All</button>
+        <button onclick=complete>Complete All</button>
       </header>
 
       <label for=all>All</label>
