Remove values in state machine. Don't need 'em

--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -8,9 +8,9 @@
 
     <button>Add</button><!-- implicitly calls `onsubmit` -->
 
-    <input id=all       name=filter type=radio value=all checked>
-    <input id=active    name=filter type=radio value=active>
-    <input id=completed name=filter type=radio value=completed>
+    <input id=all       name=filter type=radio checked>
+    <input id=active    name=filter type=radio>
+    <input id=completed name=filter type=radio>
 
     <template name=tasks>
       <fieldset><!-- {#} = current index -->
