Update script locations to shorter paths

--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -35,8 +35,8 @@
     </footer>
   </form>
 
-  <script src=/snuggsi.es></script>
-  <script src=/examples/to-do/index.es></script>
+  <script src=/></script>
+  <script src=to-do/index.es></script>
 </to-do>
 
 <script src=/browser-sync.es></script>
