Add sandbox to deployment routine and ignore

--- a/sandbox.html
+++ b/sandbox.html
@@ -1,16 +1,22 @@
 <title>ツsnuggsi Easy Web Components</title>
 
-<link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
+<link rel='tylesheet' href='http://www.devpunks.com/typography.css'>
 
-<script src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=dist/snuggsi.es></script>
+<h1->snuggsiツ<p><a></p></h1->
 
-<hgroup>
-  <h1>snuggsiツ</h1>
-  <h2>Easy DOM Components</h2>
-</hgroup>
+<script src=/snuggsi.es></script>
+<script>
 
-<x-foo></x-foo>
+  Element `h1-`
 
+  (class extends HTMLElement {
+    onconnect () {
+      const a = 'a'
+
+      console.log (this.select `p ${a}`)
+    }
+  })
+
+</script>
 <script src=/browser-sync.es></script>
 
