Add `Child Selection` section to main documentation

--- a/index.html
+++ b/index.html
@@ -388,6 +388,30 @@
 <section view id=conventions>
   <h1>Conventions</h1>
 
+  <article><!-- <medium-article> -->
+    <header>Child Selection</header>
+
+    <p> Here is where conventions on selecting children will live.
+
+    <aside>
+      <header>Relatd Links</header>
+
+      <ul>
+        <li>
+          <a rel=help target=external href=#>
+            Element.querySelector ()
+          </a>
+
+        <li>
+          <a rel=help target=external href=#>
+            Element.querySelectorAll ()
+          </a>
+
+    </aside>
+
+    </footer>Medium Article Link</footer>
+  </article>
+
 <!--
   <header>Creating Custom Elements</header>
 
@@ -421,7 +445,6 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
 
 
   <header><em>Preloading</em> Dependencies</header>
-
 
 -->
 
