Update index.html Interface documentation

--- a/index.html
+++ b/index.html
@@ -569,6 +569,30 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
 <section view id=interfaces>
   <h1>Interfaces</h1>
 
+  <p>This is some content about interfaces
+
+  <section view id=interfaces:element>
+    <header><code>Element</code></header>
+
+    <p>Documentation about interfaces:element
+
+    <section view id=interfaces:element:select>
+      <header><code>Element.select</code></header>
+
+      <p>Documentation about interfaces:element:select
+
+      <footer>This is the footer</footer>
+    </section>
+
+    <section view id=interfaces:element:selectAll>
+      <header><code>Element.selectAll</code></header>
+
+      <p>Documentation about interfaces:element:select
+
+      <footer>This is the footer</footer>
+    </section>
+  </section>
+
 </section>
 
 <section view id=events>
