Remove view from sections

--- a/index.html
+++ b/index.html
@@ -571,12 +571,12 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
 
   <p>This is some content about interfaces
 
-  <section view id=interfaces:element>
+  <section id=interfaces:element>
     <header><code>Element</code></header>
 
     <p>Documentation about interfaces:element
 
-    <section view id=interfaces:element:select>
+    <section id=interfaces:element:select>
       <header><code>Element.select</code></header>
 
       <p>Documentation about interfaces:element:select
@@ -584,7 +584,7 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
       <footer>This is the footer</footer>
     </section>
 
-    <section view id=interfaces:element:selectAll>
+    <section id=interfaces:element:selectAll>
       <header><code>Element.selectAll</code></header>
 
       <p>Documentation about interfaces:element:select
