--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -1,42 +1,9 @@
-<to-do>
-  <link rel=stylesheet href=to-do/index.css>
+<script src=/snuggsi.es></script>
+<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-  <h1>{name}'s &lt;to-do&gt; List</h1>
+<link rel=import href=to-do/template.html>
+<link rel=stylesheet href=https://devpunks.herokuappcom/typography.css>
 
-  <form action=#>
-    <input required placeholder='Remember the milk&hellip;'>
-
-    <button type=submit>Add</button><!-- implicitly calls `onsubmit` -->
-
-    <input id=all       name=filter type=radio checked>
-    <input id=active    name=filter type=radio>
-    <input id=completed name=filter type=radio>
-
-    <template name=tasks>
-    <fieldset><!-- {#} = current index -->
-      <input id={#} onclick=toggle type=checkbox>
-
-      <label for={#}>{task}</label>
-
-      <button onclick=remove>Remove</button>
-    </fieldset>
-    </template>
-
-    <footer>
-      <header>{count} items left
-        <button onclick=complete>Complete All</button>
-      </header>
-
-      <label for=all>All</label>
-      <label for=active>Active</label>
-      <label for=completed>Completed</label>
-
-      <button onclick=clear>Clear Completed</button>
-    </footer>
-  </form>
-
-  <script src=/></script>
-  <script src=to-do/index.es></script>
-</to-do>
+<to-do></to-do>
 
 <script src=/browser-sync.es></script>
