Add title to master document

--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -1,3 +1,7 @@
+<title>&lt;hello-world&gt;</title>
+
+<meta name=viewport content=width=device-width,initial-scale=1>
+
 <script src=/snuggsi.es></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
