--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -6,6 +6,13 @@
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=import href=to-do/template.html>
+<link rel=import href=header-group>
+<link rel=stylesheet href=//www.devpunks.com/typography.css>
+
+<header-group>
+  <h2 slot=header>&lt;to-do&gt;</h2>
+  <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
+</header-group>
 
 <to-do></to-do>
 
