Update title to `to-do`

--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -1,4 +1,4 @@
-<title>&lt;hello-world&gt;</title>
+<title>&lt;to-do&gt;</title>
 
 <meta name=viewport content=width=device-width,initial-scale=1>
 
