Add form styles to to-do component

--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -7,7 +7,8 @@
 
 <link rel=import href=header-group>
 <link rel=import href=to-do/template.html>
-<link rel=stylesheet href=//www.devpunks.com/typography.css>
+<link rel=stylesheet href=//devpunks.herokuapp.com/typography.css>
+<link rel=stylesheet href=//devpunks.herokuapp.com/form.css>
 
 <header-group>
   <h2 slot=header>&lt;to-do&gt;</h2>
