Add name attribute

--- a/examples/to-do/index.html
+++ b/examples/to-do/index.html
@@ -15,6 +15,6 @@
   <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
 </header-group>
 
-<to-do></to-do>
+<to-do name='Loren Hale'>Loading...</to-do>
 
 <script src=/browser-sync.es></script>
