🐛 🐛 🐛 🐛  HUGE BUG in platform with fieldset & flexbox   This kept me up all night. Le' Sigh. Amazingly   Although I believe [Webkit was able to patch   this](https://bugs.webkit.org/attachment.cgi?id=303518&action=review)   there is still the situation in 2017.
  - Example: https://codepen.io/stardotbmp/pen/ofzhr
  - S.O. https://stackoverflow.com/questions/28078681/why-cant-fieldset-be-flex-containers
  - Chromium Bug tracker:
    https://bugs.chromium.org/p/chromium/issues/detail?id=375693
  - Flexbugs: https://github.com/philipwalton/flexbugs

--- a/examples/to-do/template.html
+++ b/examples/to-do/template.html
@@ -14,13 +14,12 @@
     <input id=completed name=filter type=radio>
 
     <template name=tasks>
-    <fieldset><!-- {#} = current index -->
-      <input id={#} onclick=toggle type=checkbox>
-
+    <article><!--{#} = current index -->
+      <input  id={#} onclick=toggle type=checkbox>
       <label for={#}>{task}</label>
 
       <button onclick=remove>Remove</button>
-    </fieldset>
+    </article>
     </template>
 
     <footer>
@@ -35,6 +34,6 @@
       <button onclick=clear>Clear Completed</button>
     </footer>
   </form>
+</template>
 
   <script src=index.es></script>
-</template>
