Migrate count display to label

--- a/examples/to-do/template.html
+++ b/examples/to-do/template.html
@@ -24,12 +24,12 @@
     </article>
     </template>
 
-    <menu>{count} items left
+    <menu>
       <button onclick=complete>Complete All</button>
 
-      <label for=all>All</label>
-      <label for=active>Active</label>
-      <label for=completed>Completed</label>
+      <label for=all>All {count}</label>
+      <label for=active>Active {count}</label>
+      <label for=completed>Completed {count}</label>
 
       <button onclick=clear>Clear Completed</button>
     </menu>
