Use actual values for indicators

--- a/examples/to-do/template.html
+++ b/examples/to-do/template.html
@@ -27,9 +27,9 @@
     <menu>
       <button onclick=complete>Complete All</button>
 
-      <label for=all>All {count}</label>
-      <label for=active>Active {count}</label>
-      <label for=completed>Completed {count}</label>
+      <label for=all data-all={all}>All</label>
+      <label for=active data-active={active}>Active</label>
+      <label for=completed data-completed={completed}>Completed</label>
 
       <button onclick=clear>Clear Completed</button>
     </menu>
