Update button text to shorter words

--- a/examples/to-do/template.html
+++ b/examples/to-do/template.html
@@ -25,13 +25,13 @@
     </template>
 
     <menu>
-      <button onclick=complete>Complete All</button>
+      <button onclick=complete>Complete</button>
 
       <label for=all data-all={all}>All</label>
       <label for=active data-active={active}>Active</label>
       <label for=completed data-completed={completed}>Completed</label>
 
-      <button onclick=clear>Clear Completed</button>
+      <button onclick=clear>Clear</button>
     </menu>
   </form>
 </template>
