set maxlength of input used in task name

--- a/examples/to-do/template.html
+++ b/examples/to-do/template.html
@@ -7,7 +7,7 @@
 
   <form action=#>
     <header>
-      <input required placeholder='Remember the milk&hellip;'>
+      <input required placeholder='Remember the milk&hellip;' maxlength=20>
       <button type=submit>Add</button><!-- implicitly calls `onsubmit` -->
     </header>
 
