--- a/examples/to-do/template.html
+++ b/examples/to-do/template.html
@@ -27,9 +27,9 @@
     <menu>
       <button onclick=complete>Complete</button>
 
-      <label for=all data-all={all}>All</label>
-      <label for=active data-active={active}>Active</label>
-      <label for=completed data-completed={completed}>Completed</label>
+      <label for=all data-count={all}>All</label>
+      <label for=active data-count={active}>Active</label>
+      <label for=completed data-count={completed}>Completed</label>
 
       <button onclick=clear>Clear</button>
     </menu>
