--- a/examples/to-do/template.html
+++ b/examples/to-do/template.html
@@ -29,7 +29,7 @@
 
       <label for=all data-count={all}>All</label>
       <label for=active data-count={active}>Active</label>
-      <label for=completed data-count={completed}>Completed</label>
+      <label for=completed data-count={completed}>Done</label>
 
       <button onclick=clear>Clear</button>
     </menu>
