--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -3,7 +3,7 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<script src=/></script>
+<script src=/snuggsi.es></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
