--- a/examples/import-html/index.html
+++ b/examples/import-html/index.html
@@ -11,9 +11,8 @@
 <link rel=import href=/examples/header-group>
 
 <style>
-  import-html {
-    display: block;
-  }
+  import-html
+    { display: block }
 </style>
 
 <header-group>
