--- a/examples/import-html/html-fragment.html
+++ b/examples/import-html/html-fragment.html
@@ -1,10 +1,9 @@
-
 <!-- nested stylesheets appear not to load -->
-<link rel='stylesheet' src=nested-style.css />
+<link rel=stylesheet src=nested-style.css />
 
 <!-- inline styles apply -->
 <style>
-  h1 { margin-bottom: 1em; }
+  h1   { margin-bottom: 1em  }
   body { background: #001100 }
 </style>
 
