--- a/examples/import-html/index.html
+++ b/examples/import-html/index.html
@@ -21,11 +21,11 @@
 </header-group>
 
 <!-- YOUR CONTENT HERE -->
-<import-html src=http://localhost:8081/examples/import-html/html-fragment.html>
+<import-html src=/examples/import-html/html-fragment.html>
   Import Hasn't Happened
 </import-html>
 
-<import-html src=http://localhost:8081/examples/import-html/html-fragment-footer.html>
+<import-html src=/examples/import-html/html-fragment-footer.html>
 
 <script>
   Element `import-html`
